force-app/main/default/objects/Currency_Exchange_Rate__c/Currency_Exchange_Rate__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Daily market FX rates maintained by CurrencyRatesRefreshJob; read only through CurrencyService. Name = ISO code, rate = units of that currency per 1 AED.</description>
    <label>Currency Exchange Rate</label>
</CustomObject>