force-app/main/default/objects/Currency_Exchange_Rate__c/fields/Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Last_Refreshed__c</fullName>
    <description>When this rate was last fetched from the FX API.</description>
    <label>Last Refreshed</label>
    <type>DateTime</type>
</CustomField>