force-app/main/default/objects/Currency_Exchange_Rate__c/fields/Rate_Per_AED__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_AED__c</fullName>
    <description>Units of this currency per 1 AED (e.g. USD 0.272294). AED itself is never stored.</description>
    <label>Rate Per AED</label>
    <precision>18</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Number</type>
</CustomField>