force-app/main/default/objects/Currency_Exchange_Rate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where the rate came from (API host, or 'manual' for hand-entered overrides).</description>
    <label>Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>